# Flask_Rel_New

./: .gitignore  Dockerfile  README.md  app.py  app_v2.py  choices_form.py  cruzada_sql.py  main.py  pyproject.toml  requirements.txt  vars_pandas.py
apps/: criar_campo_minado.py  ideal.csv  lista_ideal.py  popular_base.py  secoes.py  sortemp_sortim.py
apps/db/: Bandeira_Perfil_Regiao.xlsm  Bandeira_Perfil_Tamanho.xlsm  Local_Tamanho.xlsm  Perfil_Tamanho.xlsm  Perfil_Tamanho_Regiao.xlsm  Telefonia.xlsm  conexao.py  processo.py  secao.py  sortemp.py  sortim.py  teste.py
conf/: geral.ini  pcom.ini  pontta.ini
processos/: gerar_relatorio.py
processos/sql_cluster_catalogo/: Cluster_CatalagoVV+.sql  Cluster_catalago.sql
processos/sql_cruzada/: Base cruzada.sql  base_cruzada.py
processos/sql_sortim_sortemp/: QUERY SORTIMENTO - SORTIM.sql  QUERY SORTIMENTO PERSONALIZADO.sql  QUERY SORTIMENTO SEÇÃO 1.sql  QUERY SORTIMENTO SEÇÃO 2.sql  (+3 more)
static/: index.html
templates/: index.html  index_1.html  index_new.html  loading.html  loading_finish.html  loading_finish_1.html  loading_finish_2.html  loading_finish_3.html  loading_finish_4.html  loading_finish_5.html  loading_finish_6.html  loading_new.html  minado_compacta.html  minado_compacta_1.html  minado_compacta_2.html  minado_digital.html  minado_digital_1.html  minado_geral.html  minado_geral_1.html  minado_geral_2.html  minado_geral_3.html  minado_geral_4.html  minado_geral_5.html  minado_mega.html  minado_quiosque.html  minado_quiosque1.html  minado_quiosque2.html  minado_quiosque5.html
(+2 files in other folders)
