[tool.poetry]
name = "flask_rel_new"
version = "0.1.0"
description = ""
authors = ["zameethi <andre.zigaib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ibm-db = "^3.0.4"
APScheduler = "^3.7.0"
requests = "^2.26.0"
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
WTForms = "^2.3.3"
pandas = "^1.3.0"
gunicorn = "^20.1.0"
openpyxl = "^3.0.7"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
